chore: set readiness check
Signed-off-by: Cliff Dornig <cliff.dornig@iteratec.com>

--- a/charts/v1beta1/tenantfilesystem/templates/tenantfilesystem-composition.yaml
+++ b/charts/v1beta1/tenantfilesystem/templates/tenantfilesystem-composition.yaml
@@ -164,7 +164,8 @@ spec:
           toFieldPath: "spec.region"
           policy:
             fromFieldPath: Required
-
+      readinessChecks:
+        - type: None
     # Create a helm release which is able to interpret complex xrd schema data
     - name: tenant-filesystem-release
       base:
