chore(fix): added new policy permission to handle aws efs access for tenants

--- a/charts/v1beta1/tenantfilesystem/templates/tenantfilesystem-composition.yaml
+++ b/charts/v1beta1/tenantfilesystem/templates/tenantfilesystem-composition.yaml
@@ -533,6 +533,7 @@ spec:
                       "Sid" : "Stmt1DescribeMountTargets",
                       "Effect": "Allow",
                       "Action": [
+                        "elasticfilesystem:DescribeAccessPoints",
                         "elasticfilesystem:DescribeFileSystems",
                         "elasticfilesystem:DescribeMountTargets",
                         "elasticfilesystem:CreateAccessPoint",
